--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "forkify",
   "version": "1.1.0",
   "description": "recipe app",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "repository": {
     "type": "git",
