--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "forkify",
   "version": "1.1.0",
   "description": "recipe app",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/stankovics/forkify-app#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.2.1",
     "parcel": "^2.2.1",
     "sass": "^1.49.7"
   },
